--- a/src/scss/menu/dataview/text.scss
+++ b/src/scss/menu/dataview/text.scss
@@ -7,6 +7,6 @@
 		.textarea { padding: 0px; overflow: auto; font-family: 'Inter'; height: auto; width: 100%; background: #fff; z-index: 1; white-space: normal; }
 	}
 	.menu.menuDataviewText.fromBlock {
-		.content { padding: 5px; }
+		.content { padding: 5px 8px; }
 	}
 }
