--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -5,18 +5,6 @@
 	.name { @include text-overflow-nw; display: inline-block; vertical-align: top; }
 }
 
-.cell.c-select {
-	.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
-	.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
-	.DraggableTags::after { display: none; }
-
-	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
-	.filter {
-		#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
-		#placeHolder { color: $colorDarkGrey; }
-	}
-}
-
 .cell.isEditing { border-radius: 2px; }
 .cell.isEditing {
 	.input-text { padding: 0px; height: 20px; }
@@ -48,32 +36,47 @@
 	.element {
 		.name { line-height: 20px; width: calc(100% - 24px); @include text-overflow-nw; }
 	}
+	.element.image {
+		.icon-object { margin: 0px; }
+	}
 	.cellContent { white-space: normal; }
 }
 
-.cellContent.c-select { line-height: 0px; }
-.cellContent.c-select {
+.cell.c-select {
 	.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
 	.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
 	.DraggableTags::after { display: none; }
-	.DraggableTags-tag { max-width: 100%; }
 
-	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
+	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; padding: 0px; display: none; }
 	.filter {
-		#filter { 
-			-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
-			word-wrap: break-word; white-space: normal;
-		}
-		#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
+		#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
+		#placeHolder { color: $colorDarkGrey; }
 	}
-	.noPlaceholder {
-		.filter #filter { position: relative; }
-		#placeHolder { display: none; }
+
+	.cellContent { line-height: 0px; }
+	.cellContent {
+		.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
+		.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
+		.DraggableTags::after { display: none; }
+		.DraggableTags-tag { max-width: 100%; }
+
+		.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
+		.filter {
+			#filter { 
+				-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
+				word-wrap: break-word; white-space: normal;
+			}
+			#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
+		}
+		.noPlaceholder {
+			.filter #filter { position: relative; }
+			#placeHolder { display: none; }
+		}
 	}
 }
 
 .cellContent.c-object {
-	.element { display: inline-block; margin: 0px 6px 6px 0px; vertical-align: top; max-width: 100%; line-height: 20px; }
+	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; }
 	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
 	.filter {
 		#filter { 
