--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -18,6 +18,12 @@ html.debug {
 		
 		.block.blockLayout.c2 { border-width: 2px; border-color: rgba(0,255,0,0.3); }
 	}
+
+	.menus .menu.menuBlockRelationList, 
+	.blocks .block.blockRelation {
+		.info { background: rgba(172,169,150,0.1); }
+		.cell { background: rgba(172,169,150,0.1); }
+	}
 	
 	.blockLast { background: rgba(0,0,255,0.1); }
 	
