--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -21,6 +21,7 @@
 		.cellHead:last-child {
 			.name { border: 0px; }
 		}
+		.cellHead.last { width: 48px; }
 		.cellHead.last {
 			.icon.plus { margin: 0px; }
 		}
