--- a/src/scss/menu/block/mention.scss
+++ b/src/scss/menu/block/mention.scss
@@ -3,7 +3,7 @@
 .menus {
 	.menu.menuBlockMention { width: 360px; }
 	.menu.menuBlockMention {
-		.content { height: 212px; overflow: visible; transition: none; }
+		.content { transition: none; padding: 0px; }
 		.items { height: 100%; }
 		.section {
 			.name { padding: 5px 16px; margin: 0px; }
