--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -56,10 +56,16 @@
 			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: $colorDarkGrey; z-index: 1;
 			opacity: 0; transition: $transitionFast; pointer-events: none;
 		}
-		.item.active::before { opacity: 0.15; }
+		.item.hover::before { opacity: 0.15; }
+
+		.item.active { color: #e89d00; }
+		.item.active::before { opacity: 1; background: #fef3c5; color: #e89d00; z-index: 0; }
+		.item.active {
+			.name { z-index: 1; }
+		}
 		
 		.item {
-			.name { display: inline-block; vertical-align: top; }
+			.name { display: inline-block; vertical-align: top; position: relative; }
 			
 			.icon { width: 20px; height: 20px; margin-right: 6px; vertical-align: top; transition: none; }
 			.icon.dnd { width: 20px; height: 20px; background-image: url('~img/icon/dnd.svg'); margin: 0px; vertical-align: top; cursor: grab; }
