iconEmoji, iconObject refactoring

--- a/src/scss/block/dataview/view/common.scss
+++ b/src/scss/block/dataview/view/common.scss
@@ -13,7 +13,7 @@
 
 				.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
 				.cellContent.c-title {
-					.smile { margin-bottom: 10px; }
+					.iconObject { margin-bottom: 10px; }
 					.name { height: 24px; width: 100% !important; }
 				}
 
