--- a/src/scss/page/auth.scss
+++ b/src/scss/page/auth.scss
@@ -11,7 +11,7 @@
 		background-color: #fff; 
 	}
 	
-	.smile { margin-bottom: 12px; }
+	.iconEmoji { margin-bottom: 12px; }
 	
 	.button { margin-right: 16px; }
 	.button:last-child { margin: 0px; }
