--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -24,7 +24,7 @@
 
 .cellContent { line-height: 20px; cursor: default; }
 .cellContent {
-	.icon-object { margin-right: 4px; vertical-align: top; }
+	.iconObject { margin-right: 4px; vertical-align: top; }
 	.name { display: inline-block; vertical-align: top; }
 	div.name:empty { display: none; }
 	span:empty { display: none; }
@@ -37,7 +37,7 @@
 		.name { line-height: 20px; width: calc(100% - 24px); @include text-overflow-nw; }
 	}
 	.element.image {
-		.icon-object { margin: 0px; }
+		.iconObject { margin: 0px; }
 	}
 	.cellContent { white-space: normal; }
 }
