--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -21,7 +21,7 @@
 		}
 		.download:hover { color: #1092d9; }
 
-		.icon.file-type { width: 24px; height: 24px; margin-right: 4px; transition: none; vertical-align: top; }
+		.icon.iconFile { width: 24px; height: 24px; margin-right: 4px; transition: none; vertical-align: top; }
 	}
 	.block.blockFile:hover {
 		.download { opacity: 1; }
