--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -36,15 +36,15 @@
 .icon.relation.c-email { background-image: url('~img/icon/dataview/relation/email.svg'); }
 .icon.relation.c-phone { background-image: url('~img/icon/dataview/relation/phone.svg'); }
 
-.icon.file-type.other { background-image: url('~img/icon/file/other.svg') !important; }
-.icon.file-type.image { background-image: url('~img/icon/file/image.svg') !important; }
-.icon.file-type.video { background-image: url('~img/icon/file/video.svg') !important; }
-.icon.file-type.text { background-image: url('~img/icon/file/text.svg') !important; }
-.icon.file-type.archive { background-image: url('~img/icon/file/archive.svg') !important; }
-.icon.file-type.audio { background-image: url('~img/icon/file/audio.svg') !important; }
-.icon.file-type.pdf { background-image: url('~img/icon/file/pdf.svg') !important; }
-.icon.file-type.presentation { background-image: url('~img/icon/file/presentation.svg') !important; }
-.icon.file-type.table { background-image: url('~img/icon/file/table.svg') !important; }
+.icon.iconFile.other { background-image: url('~img/icon/file/other.svg') !important; }
+.icon.iconFile.image { background-image: url('~img/icon/file/image.svg') !important; }
+.icon.iconFile.video { background-image: url('~img/icon/file/video.svg') !important; }
+.icon.iconFile.text { background-image: url('~img/icon/file/text.svg') !important; }
+.icon.iconFile.archive { background-image: url('~img/icon/file/archive.svg') !important; }
+.icon.iconFile.audio { background-image: url('~img/icon/file/audio.svg') !important; }
+.icon.iconFile.pdf { background-image: url('~img/icon/file/pdf.svg') !important; }
+.icon.iconFile.presentation { background-image: url('~img/icon/file/presentation.svg') !important; }
+.icon.iconFile.table { background-image: url('~img/icon/file/table.svg') !important; }
 
 .icon.view.c0 { background-image: url('~img/icon/dataview/view/grid0.svg'); }
 .icon.view.c1 { background-image: url('~img/icon/dataview/view/list0.svg'); }
@@ -72,16 +72,3 @@
 .icon.user.blue { background-color: $colorBlue; }
 .icon.user.teal { background-color: $colorTeal; }
 .icon.user.green { background-color: $colorLime; }
-
-.icon-object { display: inline-block; vertical-align: top; position: relative; width: 20px; height: 20px; }
-.icon-object {
-	.smile, .icon, .img { width: 100%; height: 100%; margin: 0px !important; transition: none; vertical-align: top; }
-	.img { border-radius: 2px; display: block; object-fit: cover; }
-	.icon.picture { background-image: url('~img/icon/menu/action/block/picture0.svg'); }
-}
-.icon-object.c24 { width: 24px; height: 24px; }
-.icon-object.c26 { width: 26px; height: 26px; }
-.icon-object.c28 { width: 28px; height: 28px; }
-.icon-object.c32 { width: 32px; height: 32px; }
-.icon-object.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; }
-.icon-object.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; }
