--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -33,9 +33,9 @@
 		}
 		.item:hover, .item.active { background: #f3f2ec; }
 		.item {
-			.smile { position: absolute; left: 50%; top: 50%; margin: -16px 0px 0px -16px; width: 32px; height: 32px; line-height: 32px; }
-			.smile .emoji-mart-emoji { vertical-align: top; }
-			.smile .emoji-mart-emoji span { margin-top: 2px; }
+			.iconEmoji { position: absolute; left: 50%; top: 50%; margin: -16px 0px 0px -16px; width: 32px; height: 32px; line-height: 32px; }
+			.iconEmoji .emoji-mart-emoji { vertical-align: top; }
+			.iconEmoji .emoji-mart-emoji span { margin-top: 2px; }
 		}
 	}
 	
@@ -43,8 +43,8 @@
 	.menu.menuSmileSkin {
 		.item { display: inline-block; vertical-align: top; width: 40px; height: 40px; cursor: pointer; position: relative; }
 		.item {
-			.smile { position: absolute; left: 50%; top: 50%; margin: -16px 0px 0px -16px; width: 32px; height: 32px; line-height: 32px; }
-			.smile .emoji-mart-emoji span { margin-top: 2px; }
+			.iconEmoji { position: absolute; left: 50%; top: 50%; margin: -16px 0px 0px -16px; width: 32px; height: 32px; line-height: 32px; }
+			.iconEmoji .emoji-mart-emoji span { margin-top: 2px; }
 		}
 		.item:last-child { margin: 0px; }
 	}
