--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -68,8 +68,11 @@
 
 .header.headerMainEdit { background: #fff; height: 38px; line-height: 20px; }
 .header.headerMainEdit {
-	.icon { width: 40px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
-	.icon:hover, .icon.active { background-color: #f3f2ec; }
+
+	.side.left, .side.right {
+		.icon { width: 40px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
+		.icon:hover, .icon.active { background-color: #f3f2ec; }
+	}
 
 	.path { 
 		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px;
@@ -87,8 +90,6 @@
 	}
 
 	.side.center {
-		.icon { margin: 0px; opacity: 0; }
-
 		.icon.new-set { width: 20px; height: 20px; opacity: 1; transition: none; margin-right: 4px; }
 		.icon.new-set:hover { background-color: transparent; }
 
