--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -2,7 +2,7 @@
 
 .iconObject { display: inline-block; vertical-align: top; position: relative; width: 20px; height: 20px; }
 .iconObject {
-	.iconEmoji, .iconImage, .iconFile { width: 100%; height: 100%; transition: none; vertical-align: top; }
+	.iconEmoji, .iconImage, .iconFile, .iconUser { width: 100%; height: 100%; transition: none; vertical-align: top; }
 	.iconImage { border-radius: 3px; background-size: cover; }
 
 	.iconImage.c18, .iconFile.c18 { @include pos-abs-mid; width: 18px; height: 18px; margin: -9px 0px 0px -9px; }
@@ -18,6 +18,7 @@
 .iconObject.c32 { width: 32px; height: 32px; }
 .iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
 .iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
+.iconObject.c96 { display: block; width: 96px; height: 96px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
 
 .iconObject.c48, .iconObject.c64 {
 	.iconImage { border-radius: 100%; width: 100%; height: 100%; margin: 0px; left: 0px; top: 0px; }
