--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -69,10 +69,8 @@
 .header.headerMainEdit { background: #fff; height: 38px; line-height: 20px; }
 .header.headerMainEdit {
 
-	.side.left, .side.right {
-		.icon { width: 40px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
-		.icon:hover, .icon.active { background-color: #f3f2ec; }
-	}
+	.icon.big { width: 40px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
+	.icon.big:hover, .icon.big.active { background-color: #f3f2ec; }
 
 	.path { 
 		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px;
@@ -93,7 +91,7 @@
 		.icon.new-set { width: 20px; height: 20px; opacity: 1; transition: none; margin-right: 4px; }
 		.icon.new-set:hover { background-color: transparent; }
 
-		.icon.plus { margin-left: 6px; }
+		.icon.plus { opacity: 0; margin-left: 6px; }
 		.icon.plus {
 			.arrow { 
 				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow.svg'); position: absolute; right: -12px;
