--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -16,9 +16,9 @@
 		kbd { display: inline; font-family: 'Plex'; border-radius: 2px; background: rgba(172,169,150,0.15); }
 
 		smile {
-			.iconObject { display: inline; }
 			img { position: static; left: auto; top: auto; margin: 0px; vertical-align: middle; margin-top: -4px; }
 		}
+		smile * { display: inline; }
 
 		emoji { display: inline; user-select: all; }
 		emoji * { user-select: all; }
