#950: menuDataviewFilter restore range on update

--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -78,7 +78,7 @@
 			
 			.iconObject { vertical-align: top; }
 
-			.iconEmoji, .iconObject { margin-right: 4px; }
+			.iconObject { margin-right: 4px; }
 			.iconEmoji {
 				.icon.blank { margin: 0px; }
 			}
