--- a/src/scss/popup/confirm.scss
+++ b/src/scss/popup/confirm.scss
@@ -8,7 +8,7 @@
 		.button { margin-right: 16px; }
 		.button.last-child { margin: 0px; }
 
-		.iconEmoji { margin-bottom: 12px; }
+		.iconObject { margin-bottom: 12px; }
 
 		.icon { width: 32px; height: 32px; }
 		.icon.update { background-image: url('~img/icon/update.svg'); }
