--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -32,7 +32,7 @@
 				cursor: pointer; transition: $transitionFast; position: relative; height: 64px; line-height: 48px; padding: 8px 16px; 
 			}
 			.item {
-				.iconEmoji { transition: $transitionFast; }
+				.iconObject { transition: $transitionFast; }
 				.iconObject { position: absolute; left: 16px; top: 8px; transition: $transitionFast; }
 				.info { padding: 0px 0px 0px 60px; display: inline-block; vertical-align: middle; width: 100%; }
 				.name { width: 100%; line-height: 22px; height: 22px; @include text-overflow-nw;  }
@@ -41,7 +41,7 @@
 
 			.item.active { background-color: rgba(172, 169, 150, 0.15); }
 			.item.active {
-				.iconEmoji { background-color: $colorLightGrey; }
+				.iconObject { background-color: $colorLightGrey; }
 			}
 		}
 
@@ -67,7 +67,7 @@
 				.item.active { background: none; border-color: $colorOrange !important; box-shadow: 0px 0px 0px 1px $colorOrange inset; }
 				.item.active {
 					.icon.arrow { background-image: url('~img/arrow/nav1.svg'); }
-					.iconEmoji { background: #f7f5f0; }
+					.iconObject { background: #f7f5f0; }
 				}
 
 				.item.empty { line-height: 78px; cursor: default; }
