fix head styles

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -13,6 +13,7 @@ body {
 }
 body.over { overflow-y: hidden; }
 body.colResize { cursor: col-resize !important; }
+body.colResize * { cursor: col-resize !important; }
 
 :focus { outline: 0px; }
 
