--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -3,24 +3,22 @@
 .blocks {
 	.block.blockDataview {
 		.cellHead { 
-			text-align: left; color: #6c6a5f; padding: 14px; white-space: nowrap; 
-			font-weight: 400; line-height: 20px; position: relative; @include text-overflow-nw; cursor: grab;
+			text-align: left; color: #6c6a5f; padding: 14px 0px 14px 4px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
+			@include text-overflow-nw; cursor: grab;
 		}
-		.cellHead * { cursor: grab; }
 		.cellHead {
+			.cellContent { cursor: grab; }
 			.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: top; }
 			.name { 
 				display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: calc(100% - 24px); 
 				@include text-overflow-nw;
 			}
-			.resize { width: 20px; height: 20px; position: absolute; right: -10px; top: 14px; cursor: col-resize; z-index: 1; }
+			.resize { width: 20px; height: 20px; position: absolute; right: 0px; top: 14px; cursor: col-resize; z-index: 1; }
 			.resize {
 				.line { width: 1px; height: 100%; background: #e0ded2; position: absolute; top: 0px; left: 9px; }
 			}
 		}
-		.cellHead:last-child {
-			.name { border: 0px; }
-		}
+		.cellHead:first-child { padding-left: 14px; }
 		.cellHead.last { width: 48px; }
 		.cellHead.last {
 			.icon.plus { margin: 0px; }
