--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -26,7 +26,7 @@
 		.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark0.svg'); }
 		.icon.code { background-image: url('~img/icon/menu/action/block/code0.svg'); }
 		
-		.icon.line { background-image: url('~img/icon/menu/action/block/line0.svg'); }
+		.icon.dev-line { background-image: url('~img/icon/menu/action/block/line0.svg'); }
 		.icon.dot { background-image: url('~img/icon/menu/action/block/dot0.svg'); }
 
 		.icon.bold { background-image: url('~img/icon/menu/action/mark/bold0.svg'); }
