--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -37,7 +37,7 @@
 			.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark1.svg'); }
 			.icon.code { background-image: url('~img/icon/menu/action/block/code1.svg'); }
 			
-			.icon.line { background-image: url('~img/icon/menu/action/block/line1.svg'); }
+			.icon.div-line { background-image: url('~img/icon/menu/action/block/line1.svg'); }
 			.icon.dot { background-image: url('~img/icon/menu/action/block/dot1.svg'); }
 
 			.icon.relation { background-image: url('~img/icon/menu/action/block/relation1.svg'); }
