#954: removed smartBlockTypes and switched to ObjectLayout

--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -83,7 +83,7 @@
 	}
 }
 
-.editorWrapper.isProfile.withIconAndCover {
+.editorWrapper.isContact.withIconAndCover {
 	.block.blockCover.align0 {
 		.elements {
 			.buttons { left: 112px; }
