--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -94,6 +94,7 @@
 .iconObject.c26 { width: 26px; height: 26px; }
 .iconObject.c28 { width: 28px; height: 28px; }
 .iconObject.c32 { width: 32px; height: 32px; }
+.iconObject.c40 { width: 40px; height: 40px; }
 .iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
 .iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
 .iconObject.c96 { display: block; width: 96px; height: 96px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
