--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -84,11 +84,12 @@
 			}
 		}
 		
-		.item.withDescription { padding-top: 8px; padding-bottom: 8px; }
+		.item.withDescription { padding: 8px 16px; height: 56px; }
 		.item.withDescription {
-			.icon { width: 40px; height: 40px; border-radius: 6px; position: absolute; left: 16px; top: 8px; }
+			.icon, .iconObject { width: 40px; height: 40px; border-radius: 6px; position: absolute; left: 16px; top: 8px; }
 			.descr { @include text-small; height: 18px; color: #6c6a5f; }
-			.info { padding-left: 52px; }
+			.descr:empty { display: none; }
+			.info { padding-left: 52px; line-height: 40px; }
 			.name { line-height: 22px; }
 		}
 
