--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -35,10 +35,10 @@
 
 	.cell.isEditing { padding: 0px; }
 	.cell.isEditing {
-		.cellContent { position: static; padding: 6px 4px !important; }
+		.cellContent { position: static; padding: 5px 8px !important; }
 	}
 
 	.cell.isEditing.c-description, .cell.isEditing.c-file { 
-		.cellContent { box-shadow: 0px 0px; padding: 0px !important; }
+		.cellContent { box-shadow: 0px 0px; }
 	}
 }
