--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -5,14 +5,13 @@
 	.menu.menuSmile {
 		.content { overflow: visible; }
 
-		.head { color: $colorDarkGrey; font-weight: 500; padding: 3px 16px 10px 16px; border-bottom: 1px solid #eae9e0; }
+		.head { color: $colorDarkGrey; font-weight: 500; padding: 3px 16px 10px 16px; border-bottom: 1px solid $colorLightGrey; }
 		.head {
 			.btn { display: inline-block; vertical-align: top; margin-right: 16px; transition: $transitionFast; cursor: pointer; }
 			.btn:last-child { margin-right: 0px; }
 			.btn:hover { color: $colorBlack; }
 		}
 		
-		.filter { padding: 3px 16px 10px 16px; border-bottom: 1px solid #eae9e0; }
 		.filter.withHead { padding-top: 11px; }
 	
 		.items { overflow: auto; height: 288px; }
