relation edit menu

--- a/src/scss/menu/dataview/relation.scss
+++ b/src/scss/menu/dataview/relation.scss
@@ -17,6 +17,7 @@
 		.wrap { padding: 0px 16px 8px 16px; }
 		.input { border: 1px solid $colorLightGrey; padding: 0px 8px; }
 		.switch { position: absolute; right: 16px; top: 50%; margin-top: -8px; }
+		.button { width: 100%; margin-top: 8px; }
 
 		.item.disabled { cursor: default; opacity: 1 !important; }
 		.item.disabled:hover::before { opacity: 0; }
