--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -11,8 +11,13 @@
 .button.grey { background: none; color: $colorBlack; box-shadow: 0px 0px 0px 1px #d2d0c2 inset; }
 .button.grey:hover { box-shadow: 0px 0px 0px 1px $colorBlack inset; }
 
+.button.grey.filled { background: $colorLightGrey; color: #fff; box-shadow: 0px 0px; }
+.button.grey:hover { box-shadow: 0px 0px; }
+
 .button.blank { line-height: 36px; background: none; border: solid 1px #d5d3c8; }
 .button.blank:hover { background: #d5d3c8; }
+
+.button.c28 { height: 28px; line-height: 26px; }
 
 input.button { line-height: 1; }
 
