--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -18,8 +18,12 @@
 	}
 }
 
-.cell.isEditing.c-select, .cell.isEditing.c-object {
+.cell.isEditing.c-select {
 	.filter { display: inline-block !important; }
+}
+
+.cell.isEditing.c-object {
+	.empty { display: block; }
 }
 
 .cellContent { line-height: 20px; cursor: default; }
@@ -76,19 +80,8 @@
 }
 
 .cellContent.c-object {
-	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; }
-	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
-	.filter {
-		#filter { 
-			-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
-			word-wrap: break-word; white-space: normal;
-		}
-		#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
-	}
-	.noPlaceholder {
-		.filter #filter { position: relative; }
-		#placeHolder { display: none; }
-	}
+	.element { display: inline-block; margin: 0px 8px 2px 0px; vertical-align: top; max-width: 100%; line-height: 20px; white-space: nowrap; }
+	.empty { color: $colorDarkGrey; display: none; }
 }
 
 .cellContent.isName {
