--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -27,9 +27,7 @@
 		}
 	}
 
-	.cell { 
-		@include text-common; width: calc(100% - 216px); position: relative; padding: 5px 8px; line-height: 20px; 
-	}
+	.cell { @include text-common; width: calc(100% - 216px); position: relative; padding: 5px 8px; }
 
 	.cell.c-select { padding: 7px 8px; }
 
