--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -3,7 +3,7 @@
 .blocks {
 	.block.blockDataview {
 		.cellHead { 
-			text-align: left; color: #6c6a5f; padding: 14px 14px 14px 4px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
+			text-align: left; color: #6c6a5f; padding: 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
 			@include text-overflow-nw; cursor: grab;
 		}
 		.cellHead {
@@ -15,7 +15,7 @@
 			}
 			.resize { width: 20px; height: 20px; position: absolute; right: 0px; top: 14px; cursor: col-resize; z-index: 1; }
 			.resize {
-				.line { width: 1px; height: 100%; background: #e0ded2; position: absolute; top: 0px; left: 9px; }
+				.line { width: 1px; height: 100%; background: #e0ded2; position: absolute; top: 0px; left: 19px; }
 			}
 		}
 		.cellHead:first-child { padding-left: 14px; }
@@ -55,6 +55,9 @@
 			}
 			.cell.isEditing.c-description { 
 				.cellContent { display: none; }
+			}
+			.cell.isEditing.c-checkbox { 
+				.cellContent { min-width: unset; }
 			}
 
 			.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
