--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -26,7 +26,7 @@
 	.empty { display: block; }
 }
 
-.cellContent { cursor: default; }
+.cellContent { cursor: default; border-radius: 4px; }
 .cellContent {
 	.iconObject { margin-right: 4px; vertical-align: top; }
 	.name { display: inline-block; vertical-align: top; }
