--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -44,7 +44,7 @@
 				}
 			}
 				
-			.cell { padding: 14px 14px 14px 4px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
+			.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			.cell:first-child { padding-left: 14px; }
 
 			.cell.isEditing {
