--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -1,6 +1,8 @@
 @import "~scss/_vars";
 
 .menus {
+
+	.menu.menuDataviewObjectList { width: 288px; }
 	.menu.menuDataviewObjectList {
 		.content { overflow: visible; transition: none; }
 		.wrap { height: 100%; display: flex; flex-direction: column; }
@@ -30,6 +32,25 @@
 		.icon.arrow { 
 			width: 20px; height: 20px; position: absolute; right: 14px; top: 50%; margin: -10px 0px 0px 0px; 
 			background-image: url('~img/arrow/menu.svg'); 
+		}
+	}
+
+	.menu.menuDataviewObjectValues { width: 288px; }
+	.menu.menuDataviewObjectValues {
+		.item {
+			.name { width: calc(100% - 132px) !important; }
+
+			.icon.delete { 
+				width: 24px; height: 24px; background-size: 20px; right: 14px; margin-top: -12px; border-radius: 4px; 
+				opacity: 0; z-index: 1;
+			}
+			.icon.delete:hover { background-color: rgba(172, 169, 150, 0.15); }
+
+			.caption { transition: $transitionFast; }
+		}
+		.item.hover {
+			.caption { opacity: 0; }
+			.icon.delete { opacity: 1; }
 		}
 	}
 }
