--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -53,6 +53,9 @@
 			.cell.isEditing.c-select { 
 				.cellContent { padding-bottom: 8px; }
 			}
+			.cell.isEditing.c-object { 
+				.cellContent { padding-bottom: 12px; }
+			}
 			.cell.isEditing.c-description { 
 				.cellContent { display: none; }
 			}
