#974: separated Relations from ViewRelations

--- a/src/scss/menu/dataview/common.scss
+++ b/src/scss/menu/dataview/common.scss
@@ -8,6 +8,8 @@
 	.menu.menuDataviewObjectType,
 	.menu.menuDataviewObjectValues,
 	.menu.menuDataviewOptionList,
+	.menu.menuDataviewFilter,
+	.menu.menuDataviewSort,
 	{
         .item:hover::before { opacity: 0.15; }
 		.item {
