#908: fix MenuBlockRelationList cell edit mechanism

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -11,7 +11,6 @@ body {
 	transform-style: flat;
 	overscroll-behavior: none;
 }
-body.over { overflow-y: hidden; }
 body.colResize { cursor: col-resize !important; }
 body.colResize * { cursor: col-resize !important; }
 
@@ -95,7 +94,8 @@ html.platformWindows {
 .disabled { opacity: 0.5 !important; cursor: default !important; }
 .dis { cursor: default !important; }
 .readOnly { -webkit-user-modify: read-only !important; }
-.no-br { border-radius: unset !important;}
+.no-br { border-radius: unset !important; }
+.over { overflow: hidden !important; }
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
