--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -37,6 +37,6 @@
 	}
 
 	.cell.isEditing.c-description, .cell.isEditing.c-file { 
-		.cellContent { box-shadow: 0px 0px; }
+		.cellContent { box-shadow: 0px 0px; border: 0px; }
 	}
 }
