--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -38,6 +38,7 @@
 	.menu.vertical { width: 208px; }
 	.menu.vertical {
 		.content { overflow-y: auto; max-height: 450px; padding: 8px 0px; border-radius: inherit; }
+		.ReactVirtualized__Grid__innerScrollContainer { margin: 8px 0px; }
 		
 		.filter { padding: 3px 16px 0px 16px; }
 		.filter {
