--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -15,27 +15,6 @@
 		#filter { -webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; }
 		#placeHolder { color: $colorDarkGrey; }
 	}
-
-	.cellContent { line-height: 0px; }
-	.cellContent {
-		.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
-		.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
-		.DraggableTags::after { display: none; }
-		.DraggableTags-tag { max-width: 100%; }
-
-		.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
-		.filter {
-			#filter { 
-				-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
-				word-wrap: break-word; white-space: normal;
-			}
-			#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
-		}
-		.noPlaceholder {
-			.filter #filter { position: relative; }
-			#placeHolder { display: none; }
-		}
-	}
 }
 
 .cell.isEditing { border-radius: 2px; }
@@ -77,6 +56,27 @@
 		.iconObject { margin: 0px; }
 	}
 	.cellContent { white-space: normal; }
+}
+
+.cellContent.c-select { line-height: 0px; }
+.cellContent.c-select {
+	.tagItem { margin: 0px 6px 6px 0px; vertical-align: top; }
+	.DraggableTags { display: inline; vertical-align: top; line-height: 0px; }
+	.DraggableTags::after { display: none; }
+	.DraggableTags-tag { max-width: 100%; }
+
+	.filter { cursor: text; margin-right: 0px; height: 18px; min-width: 18px; max-width: 100%; padding: 0px; display: none; }
+	.filter {
+		#filter { 
+			-webkit-user-modify: read-write-plaintext-only; position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; 
+			word-wrap: break-word; white-space: normal;
+		}
+		#placeHolder { color: $colorDarkGrey; width: 100%; @include text-overflow-nw;}
+	}
+	.noPlaceholder {
+		.filter #filter { position: relative; }
+		#placeHolder { display: none; }
+	}
 }
 
 .cellContent.c-object {
