--- a/src/scss/component/iconObject.scss
+++ b/src/scss/component/iconObject.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
-.iconObject { display: inline-block; vertical-align: top; position: relative; width: 20px; height: 20px; }
+.iconObject { display: inline-block; vertical-align: top; position: relative; width: 20px; height: 20px; border-radius: 3px; }
 .iconObject {
 	.iconEmoji, .iconImage, .iconFile, .iconUser { width: 100%; height: 100%; transition: none; vertical-align: top; }
 	.iconImage { border-radius: 3px; background-size: cover; }
@@ -11,6 +11,7 @@
 	.smileImage.c24, .iconImage.c24, .iconFile.c24 { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 	.smileImage.c28, .iconImage.c28, .iconFile.c28 { @include pos-abs-mid; width: 28px; height: 28px; margin: -14px 0px 0px -14px; }
 	.smileImage.c32, .iconImage.c32, .iconFile.c32 { @include pos-abs-mid; width: 32px; height: 32px; margin: -16px 0px 0px -16px; }
+	.smileImage.c64, .iconImage.c64, .iconFile.c64 { @include pos-abs-mid; width: 64px; height: 64px; margin: -32px 0px 0px -32px; }
 
 	.iconFile { background-repeat: no-repeat; background-position: center center; background-size: 100%; }
 	.iconFile.other { background-image: url('~img/icon/file/other.svg') !important; }
@@ -23,7 +24,7 @@
 	.iconFile.presentation { background-image: url('~img/icon/file/presentation.svg') !important; }
 	.iconFile.table { background-image: url('~img/icon/file/table.svg') !important; }
 
-	.iconEmoji { display: inline-block; vertical-align: top; text-align: center; position: relative; overflow: hidden; }
+	.iconEmoji { display: inline-block; vertical-align: top; text-align: center; position: relative; overflow: hidden; border-radius: inherit; }
 	.iconEmoji {
 		.emoji-mart-emoji { height: 100%; display: inline-block; vertical-align: middle; }
 		.emoji-mart-emoji {
@@ -36,7 +37,7 @@
 		}
 		.icon.home.big { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 
-		.iconImage { width: 100%; height: 100%; border-radius: 100%; object-fit: cover; }
+		.iconImage { width: 100%; height: 100%; border-radius: inherit; object-fit: cover; left: 0px; top: 0px; margin: 0px; }
 		.iconBlank { width: 100%; height: 100%; }
 
 		.iconBlank.c18 { @include pos-abs-mid; width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
@@ -45,8 +46,6 @@
 			@include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; 
 		}
 	}
-
-	.iconEmoji.withImage { border-radius: 100%; }
 
 	.iconEmoji.c20 { width: 20px; height: 20px; line-height: 20px; }
 	.iconEmoji.c20 {
@@ -74,13 +73,13 @@
 		.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
 	}
 
-	.iconEmoji.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
+	.iconEmoji.c48 { display: block; width: 48px; height: 48px; line-height: 48px; }
 	.iconEmoji.c48 {
 		.emoji-mart-emoji { margin: -3px 0px 0px 1px; font-size: 24px; height: 28px; line-height: 1em; }
 		.emoji-mart-emoji { span { height: 28px; line-height: 32px; } }
 	}
 
-	.iconEmoji.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; background-color: #f7f5f0; line-height: 64px; }
+	.iconEmoji.c64 { display: block; width: 64px; height: 64px; line-height: 64px; }
 	.iconEmoji.c64 {
 		.emoji-mart-emoji { margin: -1px 0px 0px 0px; font-size: 36px; height: 1em; line-height: 1em; }
 		.emoji-mart-emoji { span { height: 36px; line-height: 36px; } }
@@ -95,28 +94,32 @@
 .iconObject.c28 { width: 28px; height: 28px; }
 .iconObject.c32 { width: 32px; height: 32px; }
 .iconObject.c40 { width: 40px; height: 40px; }
-.iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
-.iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
-.iconObject.c96 { display: block; width: 96px; height: 96px; border-radius: 100%; overflow: hidden; background-color: #f7f5f0; }
+.iconObject.c48 { display: block; width: 48px; height: 48px; border-radius: 100%; overflow: hidden; background-color: #f3f2ec; }
+.iconObject.c64 { display: block; width: 64px; height: 64px; border-radius: 100%; overflow: hidden; background-color: #f3f2ec; }
+.iconObject.c96 { display: block; width: 96px; height: 96px; border-radius: 20px; overflow: hidden; background-color: #f3f2ec; }
+.iconObject.c128 { display: block; width: 128px; height: 128px; border-radius: 20px; overflow: hidden; background-color: #f3f2ec; }
 
 .iconObject.c48, .iconObject.c64 {
 	.iconImage { border-radius: 100%; width: 100%; height: 100%; margin: 0px; left: 0px; top: 0px; }
 }
 
-.iconUser { 
-	border-radius: 100%; position: relative; overflow: hidden; text-transform: uppercase; color: #fff; text-align: center; 
-	background-color: $colorIce;
-}
-.iconUser.c20 { width: 20px !important; height: 20px !important; line-height: 20px; font-size: 12px; }
-.iconUser.c40 { width: 40px; height: 40px; line-height: 40px; font-size: 18px; }
-.iconUser.c48 { width: 48px; height: 48px; line-height: 48px; font-size: 18px; }
-.iconUser.c64 { width: 64px; height: 64px; line-height: 62px; font-size: 22px; font-weight: 500; }
-.iconUser.c96 { width: 96px; height: 96px; line-height: 96px; font-size: 44px; font-weight: 500; }
+.iconObject.isUser { border-radius: 100%; }
 
+.iconUser { 
+	border-radius: inherit; position: relative; overflow: hidden; text-transform: uppercase; color: #fff; text-align: center; 
+	background-color: $colorLightGrey; width: 100%; height: 100%;
+}
 .iconUser {
 	.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
 	.image { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; object-fit: cover; }
 }
+
+.iconUser.c20 { line-height: 20px; font-size: 12px; }
+.iconUser.c40 { line-height: 40px; font-size: 18px; }
+.iconUser.c48 { line-height: 48px; font-size: 18px; }
+.iconUser.c64 { line-height: 62px; font-size: 22px; font-weight: 500; }
+.iconUser.c96 { line-height: 96px; font-size: 44px; font-weight: 500; }
+
 .iconUser.grey { background-color: $colorLightGrey; }
 .iconUser.black { background-color: $colorBlack; }
 .iconUser.brown { background-color: $colorDarkGrey; }
