--- a/src/scss/block/iconPage.scss
+++ b/src/scss/block/iconPage.scss
@@ -2,6 +2,6 @@
 
 .blocks {
 	.block.blockIconPage {
-		.iconObject { position: relative; z-index: 2; display: inline-block;}
+		.iconObject { position: relative; z-index: 2; display: inline-block; border: 2px solid #fff; }
 	}
 }
