--- a/src/scss/block/iconUser.scss
+++ b/src/scss/block/iconUser.scss
@@ -2,6 +2,6 @@
 
 .blocks {
 	.block.blockIconUser {
-		.iconObject { position: relative; z-index: 2; cursor: pointer; display: inline-block; }
+		.iconObject { position: relative; z-index: 2; cursor: pointer; display: inline-block; border: 2px solid #fff; }
 	}
 }
